flavor section mobile friendly, fixed flavor initial slide up animation timing,optimized threshold for intersection observer to activate nav bar, tweaked carousel animation.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,9 @@ html {
   html {
     font-family: Helvetica;
   }
+  body {
+    overflow-x: visible;
+  }
 }
 @layer utilities {
   @variants responsive {
